--- a/mod2/index.html
+++ b/mod2/index.html
@@ -1,12 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<title>Test page</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Our menu</title>
+<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	<h1>My very creative first page</h1>
-	<p></p>
-	<h2></h2>
+<h1>Our Menu</h1>
+<section class="row">
+
+    <section id="s" class="col-md-4 col-sm-6 col-xs-12">
+    <div id="title1">Chicken</div>
+    <div id="d">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</div>
+    </section>
+
+    <section id="s" class="col-md-4 col-sm-6 col-xs-12">
+    <div id="title2">Beef</div>
+    <div id="d">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</div>
+    </section>
+
+    <section id="s" class="col-md-4 col-sm-12 col-xs-12">
+    <div id="title3">Sushi</div>
+    <div id="d">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</div>
+    </section>
+  </section>
 
 </body>
 </html>
