--- a/mod2/index.html
+++ b/mod2/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Our menu</title>
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-</head>
-<body>
-<h1>Our Menu</h1>
-<section class="row">
+    <html>
+        <head>
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <title>Our menu</title>
+            <link rel="stylesheet" type="text/css" href="css/styles.css">
+        </head>
+    <body>
+        <h1>Our Menu</h1>
 
-    <section id="s" class="col-md-4 col-sm-6 col-xs-12">
-    <div id="title1">Chicken</div>
-    <div id="d">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</div>
-    </section>
+        <div class="row">
+            <section class="col-md-4 col-sm-6 col-xs-12 outside">
+                <section class="box">
+                    <p id="p1" class="title">Chicken</p>
+                    <p class="content">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</p>
+                </section>
+            </section>
 
-    <section id="s" class="col-md-4 col-sm-6 col-xs-12">
-    <div id="title2">Beef</div>
-    <div id="d">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</div>
-    </section>
+            <section class="col-md-4 col-sm-6 col-xs-12 outside">
+                <section class="box">
+                    <p id="p2" class="title">Beef</p>
+                    <p class="content">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</p>
+                </section>
+            </section>
 
-    <section id="s" class="col-md-4 col-sm-12 col-xs-12">
-    <div id="title3">Sushi</div>
-    <div id="d">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</div>
-    </section>
-  </section>
+            <section class="col-md-4 col-sm-12 col-xs-12 outside">
+                <section class="box">
+                    <p id="p3" class="title">Sushi</p>
+                    <p class="content">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</p>
+                </section>
+            </section>
+          </div>
 
-</body>
-</html>
+    </body>
+    </html>
