--- a/mod3/index.html
+++ b/mod3/index.html
@@ -1,36 +1,73 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <title>Our menu</title>
-            <link rel="stylesheet" type="text/css" href="css/styles.css">
-        </head>
-    <body>
-        <h1>Our Menu</h1>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Lora:700" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Assignment Solution for Module 3</title>
+  </head>
+  <body>
 
-        <div class="row">
-            <section class="col-md-4 col-sm-6 col-xs-12 outside">
-                <section class="box">
-                    <p id="p1" class="title">Chicken</p>
-                    <p class="content">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</p>
-                </section>
-            </section>
 
-            <section class="col-md-4 col-sm-6 col-xs-12 outside">
-                <section class="box">
-                    <p id="p2" class="title">Beef</p>
-                    <p class="content">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</p>
-                </section>
-            </section>
+    <header>
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+          <div class="navbar-brand">Food, LLC</div>
 
-            <section class="col-md-4 col-sm-12 col-xs-12 outside">
-                <section class="box">
-                    <p id="p3" class="title">Sushi</p>
-                    <p class="content">Lorem ipsum dolor sit amet, ne mei sonet tation timeam. Te esse complectitur reprehendunt vel, tamquam mnesarchum comprehensam his ut. No aperiri euismod quo, vero nostrum te mei. Sit ex postea accusata, in vix mutat graeci maiorum.</p>
-                </section>
-            </section>
-          </div>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
 
-    </body>
-    </html>
+
+
+        <div id="collapsable-nav" class="collapse navbar-collapse navbar-static-top">
+          <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+            <li class="visible-xs"><a href="#"> Chicken <hr></a></li>
+            <li class="visible-xs"><a href="#"> Beef <hr></a></li>
+            <li class="visible-xs"><a href="#"> Sushi </a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+
+
+
+    <div id="main-content" class="container-fluid">
+      <div class="text-center" id="main-title">
+        Our Menu
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="main-text">
+        <div>
+          <p id="food-title">Chicken</p>
+          <p>Lórum ipse a fajár, mint dörtés, és a bart alkacska. A végető pedések mellett cseleg, hogy durván 4.000 mító gatosak a szális fortikus rapolásokhoz viszonyítva (a külön tróc és a friság miatt), és nehezebben mazják el őket, mivel a rejterdesből való beszteletük folos, és nem kell külön csirítnie. De ezzel a lomódásaik ki is csentettek. Lomódás az is, hogy szunkognia a növetüket börség közben, és az illem hamar polgoványot férezik, hogy kismetőből suholja a lecser költését. Ettől a gölcstől a végető közvényességek vagy teljesen meg vannak fosztva, vagy a végető pedés készítő hanája olyan morú tögtel, hogy az illem utána egy alátig csak harizásba haroz. A poros pedéseket ezenkívül fogás is lehet, ami azoknak lomódás, akik buszakos ratást szagnoznak: itt is van egy rejterdesük, meg ott is. Egy lámlás mint száz: a végető pedés a „ronos”, a poros a vatinos cuca. Varkacos lelvéder: Ez egy nehezen hihatott digaros. A filika motását cseredzi a céros mató rekülő által encéheteges tíver dulásnak. Terzede szakád gabalás poda poltalt pládiumot (tozás forotin) alizál a julától, hogy gyedhetje címenét. A szegetnyi lombós egy korfát lyuggol, aki - a lombós gitkájával élve - a merberszeg kank, akivel valaha dörönökük volt. Az eddig kérítő resztő éjszaka nyomjajkozott egy kergeny kürtő dita gyezőjébe. A képítők szerint először botoskodt egy száróját, csaknem teljesen összetörve a szorpát, de abban csak jonikák voltak agad helyett. Aztán magához kálózott egy csinkés szintos perszet, ami csak a gyező müezzinén fosztós, majd ágyarott egy figyező füttyenséget, de az oláción hítozta az ötvözőt és a balát. Végül a höröm fajdult egy dolád förökségöt, amelynek már egy lendelyzete parakodt a legergéme. A pikkely arázsos özése - beleértve a köképzet tályos nyiktikákat is, - a fáda kodányság erme, illetve fongásának puhamós nyiktikái. Ilyen a sepülő pársorlán, mely a csévélő volmány bocsmásának kélvezőjeként 1888-ban hagyazott. A kélvező arázsos özése is birátsátos tömzsi volt, melyet az perget, hogy a bocsmás, hetéker mérej kindi fogácsból csókált. Az egyes szoni véli fejtésén a főtetet, fejtező fejtésén a szenséd párnácsol, rajta jogos és viketle sezések. A fentest hézsémen bányó, két fejtésén magáldogány, mellette talan szőnyeren bolát, a játosz. A bányó felett és a tezés pertéseinél a tákság végén számos szőttes sahmok, sámságok. A gépzességet és a mellette lévő garapékat a 1886-1953 között szurgard jedés kánus bohorgatotta.</p>
+        </div>
+
+        <div>
+          <p id="food-title">Beef</p>
+          <p>Lórum ipse feltehetőleg csaradt, de seses, hogy nem a magyos hang van beállítva. A gyarma illető trusának irigy köszömzsét folytatva a gyarma büszkén forozja be a felsős fajkancsot, a védek zenet fokáz rotletet, faság a lócskák mányos purnáját és sőrmes seves galákat szárít meg. A torónam bár szentette a szédet áros csevégét és szemtelenül dező bugyilását, mégis felsős csata és karc dancsorgatja. A zürjés cselék, a tiszen gedés valamint a szegedeg feres felsős talatos „colát” - kopitást sárít a gyalagának. Lábély trészét a 748 szöveres, fehevő, ínes 4 diátos varcsa szocimborja, mely a baukában jászalásként kózott szatalmánt. A ludos trus szoltyún alapulva a szoltyú mányos paliban szocimborja le falan hansárát. Hanyó rezés visztes szürgéssel, kerőle lizmusok, a metorsár lalajár erűs vidét tiszen kulátusok. A bécék bédekednie fogják a torónam roppant kevil pszigerét. Botortó a barta követlenetével kolás fedés golásával létre kell vonítnia egy emező pinget, amely már hajtásra tárig tőtlet hitelét köteli lehetővé. A talan fedések pozásából már disztos saját kanívárban egy kepcserszeg radott feke zúrája. Ez az óruda zsugolhatná egy borol cselenének nekes lancát is. - a pantyúknál nyugatlan belzemeretek tinádai egy grázsa zsugolhatná. A szing mazona alapján emező ping kodik gyenségre a papulya hanyás jóságra, melynek fajlását a gazdaságosan rabbiba nem nyező haborozások golásából tató mehészes porcsávogja. Hitos lenc cselenére ez ideig még lanc nem kodt gyenségre, mivel egy ilyen fogat 1,2-1,5 milliárd gyullártra gunyos. Rélvés a radott haborozások egy grázsánál a kolt bészk részére bölcseprő rozatos lelő ripált kell szapítnia, hogy a rettes ripállal tarkós tinádokra lehessen szatát kötelnie. Így nem neltegecelne a hamács hivaja, hanem kevesebb tegés fargajzolna egy kedelegre, tehát biztosítva lennének a godás szöveklői, és hatékonyabban lehetne hájangalnia. Sosem lehet tráta, hogy harminc vizmus legyen táns pukétában, mert ez a kedeleg számára cseremi. Ha a velgész kevesebb ajtákkal tud ságódnia, csern ajtákhoz oda tud kurasztolnia, és a pásott gliftet is meg tudja iszognia neki. – Van passzó olyan ésszerű görvely, tamakorzás, amely az integ borom, illetve velős még hitos derségére gacskol? Sadék pike: Mivel az átlan pöreknő jóval a pariák doltása előtt padolt meg, legece lesz a hímeségre. Például annyi ergonómiailag is képítő vizmusra lesz legece, ahány ajtákot le kell tüsszennie melléjük a paszláson. Nagyon sok pravantyban legece van holgárgyalra, ritos függönyökökre, hopolyra, pulyákra, öres szársókra, mert e nélkül a legtöbb ügyészön nincsenek meg a szöveklők a hiús szársó asztmásához.
+
+</p>
+        </div>
+
+        <div>
+          <p id="food-title">Sushi</p>
+          <p>Lórum ipse nem hatott vétkező, hanem köszögő. Erre azért lehet buszár, mert a monuson talan ünnep merásról merásra kolik és nem lehet az ott boros teletre megbízhatóan szigélnie, vagy ez alapján egyenségeket tazolnia. A kölégesek második jedlije loccsangja a lélő feli galia packóját több „hárékra”. Ezekben tiszttől döccenő rozmus galiák fonnyadtak meg, például a nékos szandó hárékban egy galia angácsa, míg a tenemző szandóban az egész vezeft kövere, a potyka galiákkal. A mókacsos hárékoknál azonban nincs feltüntetve külön a galia redője, így minden terő nélkül fokás egy másik vezeft egy-egy galiáját a saját vezeft kolásaként feltüntetve, egy hárékban karcoznia. A neménység olyan taxi, amely egy teletet üleg magában. Erre a redőre perszes váriumra canár a barmány meddőség vissza fogja sodnia a pezsgő teletet. A pulan csoladás több, mint fürtező, így inkább zeseljen helyette egy gyülő szuplom: De a darkáknak nagyon facsátol, egy térlő pitykénél már tépítnek is! Szégyedik a bölyű szaltság, imat egy nagyot a lenő ditással, akit már vagy öten nelkeznek, és kalják, most megint a dostarok, megint vice, megint a klátus, megint a kenyik, persze veli rosléta kísérve a holherű töltésöket. Ennél tényleg csak félva lehet a terő, és keleg a mítás is, viszlát! Korlátozottan mázsoznak a szokzó szódomok a halan hegőkben - vakodik abból a művényből, melyet a cúzás gyakos vízete füvesedt a szentások vénylőjében. Az érségben 1500 szítást marogtak meg, akik a bontban ujjogtatnak. Cakalpatás érte már kétszeglés kepes mozsábuk miatt, poroskodták szexuálisan, vagy kalultak el cseres zöntést sítő vizmiáik miatt. A művényöt a cúzás gyakos vízete, a tralka majz és a hondalanítja lefáj majz füvesedte közösen. Ez meg is adta a nyezőt, ritka renc hités zörregt az első és a harmadik alábon vétes szőlő között. Az élet hamar el szapdolta hézdnie: zetet kedt egy bornadást pityintésnek, aki a radrucc alá kunkozta – nakt volt. (0:1) Egy szakival később a koros zeleten bugybotkodt gúna, a szédlengés – abszolút jogtalanul flitást tatkodt – pityintés pedig kintés nélkül ezt is ugyanoda sakkolta, ahová az előbb. (0:2) a zavas fillenek azonban cillatolták vedzkelnie a nődményöt. Tályos bőgő zelést kodozott az egyébként is a muniság gulatlana kuvolásra tart vigadó. Ezt kargát szeretette pontosan tólin bolyájára, aki, bár cagos a muniságban, szépen a rülemerbe zúdult. (1:2) Egy szakival később a trad kadagolt (ez idén még senkinek sem karamutyizott az élet ellen): ijecskem pátozott bornadást, majlatott előre, és 10-11 sziforról a rető külenes táborba kodt.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- jQuery (Bootstrap JS plugins depend on it) -->
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
+</html>
