--- a/Budget/index.html
+++ b/Budget/index.html
@@ -3,31 +3,31 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Budget management</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<section class="start">
 	<h1>Бюджет на месяц</h1>
-	<div>Январь 2017</div>
+	<div id="month">Февраль 2017</div>
 	</section>
-	<section class="name">
-		<div class="col-md-4 col-sm-4 col-xs-4">Типы расходов</div>
-		<div class="col-md-4 col-sm-4 col-xs4">Траты (грн)</div>
-		<div class="col-md-4 col-sm-4 col-xs-4">Баланс</div>
+	<section class="name hidden-xs">
+		<div class="col-md-4 col-sm-4 col-xs-6">Типы расходов</div>
+		<div class="col-md-4 col-sm-4 col-xs6">Траты (грн)</div>
+		<div class="col-md-4 col-sm-4 col-xs-12">Баланс</div>
 		<!-- <div class="col-md-2 col-sm-2 col-xs-2">График</div> -->
 	</section>
 	<section class="daily type">
-		<div class="col-md-4 col-sm-4 col-xs-4">Повседневные</div>
-		<div class="col-md-4 col-sm-4 col-xs-4">
+		<div class="col-md-4 col-sm-4 col-xs-6">Повседневные</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
 			<input id="input_daily"></input> 
 			<button onclick="myFunction('daily')">+</button>
-			<span id="span_daily"></span>
+
 		</div>
-		<div class="col-md-4 col-sm-4 col-xs-4">
+		<div class="col-md-4 col-sm-4 col-xs-12 balance">
+			<span id="span_daily"></span>
 			<progress id="progress_daily" max="2000" value="0"></progress>
 			<span id="balance_daily"></span>
 		</div>
@@ -36,13 +36,14 @@
 		</div> -->
 	</section>
 	<section class="house type">
-		<div class="col-md-4 col-sm-4 col-xs-4">Бытовые</div>
-		<div class="col-md-4 col-sm-4 col-xs-4">
+		<div class="col-md-4 col-sm-4 col-xs-6">Бытовые</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
 			<input id="input_house"></input>
 			<button onclick="myFunction('house')">+</button>
-			<span id="span_house"></span>
+
 		</div>
-		<div class="col-md-4 col-sm- col-xs-4">
+		<div class="col-md-4 col-sm-4 col-xs-12 balance">
+			<span id="span_house"></span>
 			<progress id="progress_house" max="2500" value="0"></progress>
 			<span id="balance_house"></span>
 		</div>
@@ -51,13 +52,13 @@
 		</div> -->
 	</section>
 	<section class="social type">
-		<div class="col-md-4 col-sm-4 col-xs-4">Социализация</div>
-		<div class="col-md-4 col-sm-4 col-xs-4">
+		<div class="col-md-4 col-sm-4 col-xs-6">Социализация</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
 			<input id="input_social"></input>
 			<button onclick="myFunction('social')">+</button>
-			<span id="span_social"></span>
 		</div>
-		<div class="col-md-4 col-sm-4 col-xs-4">
+		<div class="col-md-4 col-sm-4 col-xs-12 balance">
+			<span id="span_social"></span>
 			<progress id="progress_social" max="1000" value="0"></progress>
 			<span id="balance_social"></span>
 		</div>
@@ -66,13 +67,14 @@
 		</div> -->
 	</section>
 	<section class="sport type">
-		<div class="col-md-4 col-sm-4 col-xs-4">Спорт</div>
-		<div class="col-md-4 col-sm-4 col-xs-4">
+		<div class="col-md-4 col-sm-4 col-xs-6">Спорт</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
 			<input id="input_sport"></input>
 			<button onclick="myFunction('sport')">+</button>
-			<span id="span_sport"></span>
+
 		</div>
-		<div class="col-md-4 col-sm-4 col-xs-4">
+		<div class="col-md-4 col-sm-4 col-xs-12 balance">
+			<span id="span_sport"></span>
 			<progress id="progress_sport" max="2000" value="0"></progress>
 			<span id="balance_sport"></span>
 		</div>
@@ -81,13 +83,13 @@
 		</div> -->
 	</section>	
 	<section class="style type">
-		<div class="col-md-4 col-sm-4 col-xs-4">Одежда и косметика</div>
-		<div class="col-md-4 col-sm-4 col-xs-4">
+		<div class="col-md-4 col-sm-4 col-xs-6">Одежда и косметика</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
 			<input id="input_style"></input>
 			<button onclick="myFunction('style')">+</button>
-			<span id="span_style"></span>
 		</div>
-		<div class="col-md-4 col-sm-4 col-xs-4">
+		<div class="col-md-4 col-sm-4 col-xs-12 balance">
+			<span id="span_style"></span>
 			<progress id="progress_style" max="2000" value="0"></progress>
 			<span id="balance_style"></span>
 		</div>
@@ -95,5 +97,9 @@
 			<button>Ii</button>
 		</div> -->
 	</section>	
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/script.js"></script>
+<!-- 	<script src="script.js"></script> -->
 </body>
 </html>
