--- a/Budget/index.html
+++ b/Budget/index.html
@@ -19,8 +19,9 @@
 		<div class="col-md-4 col-sm-4 col-xs-12">Баланс</div>
 		<!-- <div class="col-md-2 col-sm-2 col-xs-2">График</div> -->
 	</section>
+	<div class="layout">
 	<section class="daily type">
-		<div class="col-md-4 col-sm-4 col-xs-6">Повседневные</div>
+		<div class="col-md-4 col-sm-4 col-xs-6 title">Повседневные</div>
 		<div class="col-md-4 col-sm-4 col-xs-6">
 			<input id="input_daily"></input> 
 			<button onclick="myFunction('daily')">+</button>
@@ -35,8 +36,10 @@
 			<button>Ii</button>
 		</div> -->
 	</section>
+	</div>
+	<div class="layout">
 	<section class="house type">
-		<div class="col-md-4 col-sm-4 col-xs-6">Бытовые</div>
+		<div class="col-md-4 col-sm-4 col-xs-6 title">Бытовые</div>
 		<div class="col-md-4 col-sm-4 col-xs-6">
 			<input id="input_house"></input>
 			<button onclick="myFunction('house')">+</button>
@@ -51,8 +54,10 @@
 			<button>Ii</button>
 		</div> -->
 	</section>
+	</div>
+	<div class="layout">
 	<section class="social type">
-		<div class="col-md-4 col-sm-4 col-xs-6">Социализация</div>
+		<div class="col-md-4 col-sm-4 col-xs-6 title">Социализация</div>
 		<div class="col-md-4 col-sm-4 col-xs-6">
 			<input id="input_social"></input>
 			<button onclick="myFunction('social')">+</button>
@@ -66,8 +71,10 @@
 			<button>Ii</button>
 		</div> -->
 	</section>
+	</div>
+	<div class="layout">
 	<section class="sport type">
-		<div class="col-md-4 col-sm-4 col-xs-6">Спорт</div>
+		<div class="col-md-4 col-sm-4 col-xs-6 title">Спорт</div>
 		<div class="col-md-4 col-sm-4 col-xs-6">
 			<input id="input_sport"></input>
 			<button onclick="myFunction('sport')">+</button>
@@ -81,9 +88,11 @@
 <!-- 		<div class="col-md-2 col-sm-2 col-xs-2">
 			<button>Ii</button>
 		</div> -->
-	</section>	
+	</section>
+	</div>
+	<div class="layout">	
 	<section class="style type">
-		<div class="col-md-4 col-sm-4 col-xs-6">Одежда и косметика</div>
+		<div class="col-md-4 col-sm-4 col-xs-6 title">Одежда и косметика</div>
 		<div class="col-md-4 col-sm-4 col-xs-6">
 			<input id="input_style"></input>
 			<button onclick="myFunction('style')">+</button>
@@ -97,6 +106,7 @@
 			<button>Ii</button>
 		</div> -->
 	</section>	
+	</div>
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
