--- a/Budget/index.html
+++ b/Budget/index.html
@@ -16,29 +16,35 @@
 <!-- Повседневные -->
 	<div class="layout">
 	<section class="daily type">
-		<div class="col-md-4 col-sm-4 col-xs-6 title">Повседневные</div>
+		<div class="col-md-4 col-sm-4 col-xs-6 titl">
+			<span id="title_daily">Повседневные</span>
+			<span class="max">($ = <span id="max_daily"></span>)</span>
+		</div>
 		<div class="col-md-4 col-sm-4 col-xs-12 balance">
 			<span id="span_daily"></span>
-			<progress id="progress_daily" max="2000" value="0"></progress>
+			<progress id="progress_daily" max="0" value="0"></progress>
 			<span id="balance_daily"></span>
 		</div>
 		<div class="col-md-4 col-sm-4 col-xs-6 button">
 			<form id="form" onsubmit="myFunction('daily')">
 				<input id="input_daily"></input>
 			</form> 
-
 		</div>
+		<button id='changeMax' onclick="changeMax('daily')">$</button>
 		<button onclick="plus1('daily')">1</button>
 		<button onclick="plus10('daily')">10</button>
-<!-- Бытовые -->
 	</section>
 	</div>
+<!-- Бытовые -->
 	<div class="layout">
 	<section class="house type">
-		<div class="col-md-4 col-sm-4 col-xs-6 title">Бытовые</div>
+		<div class="col-md-4 col-sm-4 col-xs-6 title"> 
+			<span id="title_house">Бытовые</span>
+			<span class="max">($ = <span id="max_house"></span>)</span>
+		</div>
 		<div class="col-md-4 col-sm-4 col-xs-12 balance">
 			<span id="span_house"></span>
-			<progress id="progress_house" class="red" max="2500" value="0"></progress>
+			<progress id="progress_house" class="red" max="0" value="0"></progress>
 			<span id="balance_house"></span>
 		</div>
 		<div class="col-md-4 col-sm-4 col-xs-6 button">
@@ -46,17 +52,21 @@
 				<input id="input_house"></input>
 			</form> 
 		</div>
+		<button id='changeMax' onclick="changeMax('house')">$</button>
 		<button onclick="plus1('house')">1</button>
 		<button onclick="plus10('house')">10</button>
-<!-- Социализация -->
 	</section>
 	</div>
+<!-- Социализация -->
 	<div class="layout">
 	<section class="social type">
-		<div class="col-md-4 col-sm-4 col-xs-6 title">Социализация</div>
+		<div class="col-md-4 col-sm-4 col-xs-6 title">
+			<span id="title_social">Социализация</span>
+			<span class="max">($ = <span id="max_social"></span>)</span>
+		</div>
 		<div class="col-md-4 col-sm-4 col-xs-12 balance">
 			<span id="span_social"></span>
-			<progress id="progress_social" max="1000" value="0"></progress>
+			<progress id="progress_social" max="0" value="0"></progress>
 			<span id="balance_social"></span>
 		</div>
 		<div class="col-md-4 col-sm-4 col-xs-6 button">
@@ -64,17 +74,21 @@
 				<input id="input_social"></input>
 			</form>
 		</div>
+		<button id='changeMax' onclick="changeMax('social')">$</button>
 		<button onclick="plus1('social')">1</button>
 		<button onclick="plus10('social')">10</button>
-<!-- Спорт -->
 	</section>
 	</div>
+<!-- Спорт -->
 	<div class="layout">
 	<section class="sport type">
-		<div class="col-md-4 col-sm-4 col-xs-6 title">Спорт</div>
+		<div class="col-md-4 col-sm-4 col-xs-6 title">
+			<span id="title_sport">Спорт</span>
+			<span class="max">($ = <span id="max_sport"></span>)</span>
+		</div>
 		<div class="col-md-4 col-sm-4 col-xs-12 balance">
 			<span id="span_sport"></span>
-			<progress id="progress_sport" max="2000" value="0"></progress>
+			<progress id="progress_sport" max="0" value="0"></progress>
 			<span id="balance_sport"></span>
 		</div>
 		<div class="col-md-4 col-sm-4 col-xs-6 button">
@@ -82,17 +96,21 @@
 				<input id="input_sport"></input>
 			</form>
 		</div>
+		<button id='changeMax' onclick="changeMax('sport')">$</button>
 		<button onclick="plus1('sport')">1</button>
-		<button onclick="plus10('sport')">10</button>		
+		<button onclick="plus10('sport')">10</button>	
 <!-- Одежда и косметика -->
 	</section>
 	</div>
 	<div class="layout">	
 	<section class="style type">
-		<div class="col-md-4 col-sm-4 col-xs-6 title">Одежда и косметика</div>
+		<div class="col-md-4 col-sm-4 col-xs-6 title">
+			<span id="title_style">Стиль</span>
+			<span class="max">($ = <span id="max_style"></span>)</span>
+		</div>
 		<div class="col-md-4 col-sm-4 col-xs-12 balance">
 			<span id="span_style"></span>
-			<progress id="progress_style" max="2000" value="0"></progress>
+			<progress id="progress_style" max="0" value="0"></progress>
 			<span id="balance_style"></span>
 		</div>
 		<div class="col-md-4 col-sm-4 col-xs-6 button">
@@ -100,8 +118,9 @@
 				<input id="input_style"></input>
 			</form>
 		</div>
+		<button id='changeMax' onclick="changeMax('style')">$</button>
 		<button onclick="plus1('style')">1</button>
-		<button onclick="plus10('style')">10</button>	
+		<button onclick="plus10('style')">10</button>
 	</section>	
 	</div>
 	<script src="js/jquery-2.1.4.min.js"></script>
