--- a/Budget/index.html
+++ b/Budget/index.html
@@ -11,7 +11,7 @@
 <body>
 	<section class="start">
 	<h1>Бюджет на месяц</h1>
-	<div id="month">Март 2017</div>
+	<div id="month">Апрель 2017</div>
 	</section>
 <!-- Повседневные -->
 	<div class="layout">
