--- a/main.html
+++ b/main.html
@@ -29,6 +29,12 @@
 		console.log(task7({min: 3, max: 100}));
 		console.log(task7({length: 3}));
 		console.log(task7({}));
+		
+		console.log(task4(3));
+		console.log(task4(4334));
+		console.log(task4(43345543));
+		console.log(task4(1234437));
+		console.log(task4('456'));
 	</script>
 
 </body>
