--- a/main.html
+++ b/main.html
@@ -22,19 +22,27 @@
 
 		console.log(task3([{ vertices:'ABC', a: 10, b: 20, c: 22.36 }, { vertices:'DFG', a: 2, b: 3, c: 3 }]));
 		console.log(task3([{ vertices:'ABC', a: 10, b: 20, c: 22.36 }]));
-
-		console.log(task6(10, 25));
-		console.log(task6(10));
-
-		console.log(task7({min: 3, max: 100}));
-		console.log(task7({length: 3}));
-		console.log(task7({}));
 		
 		console.log(task4(3));
 		console.log(task4(4334));
 		console.log(task4(43345543));
 		console.log(task4(1234437));
 		console.log(task4('456'));
+		
+		console.log(task5({min: '378965', max: '100456'}));
+		console.log(task5({min: '078965', max: '100456'}));
+		console.log(task5({min: '435449', max: '435453'}));
+		console.log(task5({min: 254496, max: '425494'}));
+		console.log(task5({min: '425449', max: ''}));
+		console.log(task5());
+		
+		console.log(task6(10, 25));
+		console.log(task6(10));
+
+		console.log(task7({min: 3, max: 100}));
+		console.log(task7({length: 3}));
+		console.log(task7({}));
+
 	</script>
 
 </body>
