--- a/ClockCalendar/index.html
+++ b/ClockCalendar/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>ClockCalendar</title>
+</head>
+<body>
+    <script src="main.js"></script>
+    <div class="clock-calendar">
+        
+    </div>
+</body>
+</html>
