--- a/ClockCalendar/index.html
+++ b/ClockCalendar/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>ClockCalendar</title>
-</head>
-<body>
-    <script src="main.js"></script>
-    <div class="clock-calendar">
+    <head>
+        <title>ClockCalendar</title>
         
-    </div>
-</body>
+        <link href="css/style.css" rel="stylesheet"/>
+        <script src="main.js"></script>
+    </head>
+    <body>
+        <div class="clock-calendar"> MM/DD/YY </div>
+    </body>
 </html>
