--- a/ClockCalendar/index.html
+++ b/ClockCalendar/index.html
@@ -7,6 +7,6 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <div class="clock-calendar"> MM/DD/YY </div>
+        <div class="clock-calendar"></div>
     </body>
 </html>
