--- a/PetShop/index.html
+++ b/PetShop/index.html
@@ -4,13 +4,13 @@
         <title>PetShop</title>
         
         <link href="css/style.css" rel="stylesheet"/>
-        <script src="js/main.js"></script>
-        <script src="js/view.js"></script>
-        <script src="js/model.js"></script>
+        <script src="js/modelPetShop.js"></script>
         <script src="js/pet.js"></script>
         <script src="js/dog.js"></script>
         <script src="js/cat.js"></script>
         <script src="js/hamster.js"></script>
+        <script src="js/viewPetShop.js"></script>
+        <script src="js/main.js"></script>
     </head>
     <body>
         <div class="PetShop"></div>
