--- a/ClockCalendar/index.html
+++ b/ClockCalendar/index.html
@@ -4,9 +4,14 @@
         <title>ClockCalendar</title>
         
         <link href="css/style.css" rel="stylesheet"/>
-        <script src="main.js"></script>
+        
+        <script src="app/ClockCalendarModel.js"></script>
+        <script src="app/ClockCalendarWidget.js"></script>
+
+        <script src="app/main.js"></script>
     </head>
     <body>
-        <div class="clock-calendar"></div>
+        <clock-calendar-widget></clock-calendar-widget>
+        <clock-calendar-widget></clock-calendar-widget>
     </body>
 </html>
