--- a/Web-component/index.html
+++ b/Web-component/index.html
@@ -12,5 +12,6 @@
     </head>
     <body>
         <clock-calendar-widget></clock-calendar-widget>
+        <clock-calendar-widget></clock-calendar-widget>
     </body>
 </html>
